tests/snapshots/test_runner__tests__compiler__typecheck__progressive_unification_10.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let bar = \(null) -> Number =>
  let x = "hello"
  x

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/progressive_unification_10.kk:3:3
  │
3 │   x
  │   ^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Number      | + String    |
    +---------------+-------------+
